// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas inherentes al componente <GifExpertApp/> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Marvel"
      key="Marvel"
    />
    <GifGrid
      category="Hulk"
      key="Hulk"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas inherentes al componente <GifExpertApp/> El componente se debe generar correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
